<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/contact_us"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/explore"
            android:title="@string/explore" />
    </group>

        <item android:title="@string/profile">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/profile"
                    android:icon="@drawable/profile"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/login"
                    android:icon="@drawable/login"
                    android:title="@string/login" />

                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/logout"
                    android:title="@string/logout" />
                </group>
            </menu>
        </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:title="@string/rate_us" />
        </menu>
    </item>
</menu>